# VideoSieve

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  docker-compose.yml  how_to_run.md  main.py  pyproject.toml  requirements.txt  run_video_sieve.cmd  setup.py  validate.sh  对比实验.txt  英特尔G31再次现身｜B580 24G内部命名开发者版｜显卡日报5月3日.cmt.xml
.github/workflows/: deploy.yml  test.yml
apps/api/: __init__.py  main.py  models.py  rest.py  service.py  ws_gateway.py
apps/web/: jest.config.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
docs/: API.md  ARCHITECTURE-old.md  ARCHITECTURE-rewrite.md  ARCHITECTURE.md  DEPLOYMENT.md  FUNASR_VAD_FIX.md  FUNASR_VAD_INTEGRATION.md  README.md  web-review-checklist.md  worker.md
docs/00_vision/: goals-and-nongoals.md  roadmap-milestones.md
docs/10_system/: artifact-realtime-plan.md  configuration.md  data-contracts.md  events-and-websocket.md  state-machine.md  workspace-layout.md
docs/20_modules/: asr.md  deliverables.md  frame-summary.md  fusion.md  hotwords.md  ingest.md  keyframes.md  ocr.md  pipeline-orchestrator.md
docs/30_apps/: api.md  web.md  workers.md
docs/40_ops/: deployment.md  observability.md  security-and-secrets.md  troubleshooting.md
docs/adr/: ADR-0001-architecture-boundary.md  ADR-0002-control-protocol-and-safe-points.md  ADR-0003-workspace-lifecycle.md  ADR-0004-redis-event-bus.md
frontend/: .env.example  Dockerfile  package.json
scripts/: demo_ingest_bilibili.py  demo_keyframes_algorithm.py  demo_real_video.py
src/: downloader.py  main.py
src/ai/: ai_analyzer.py
src/config/: config.py  config_template.py  cookies.txt
src/utils/: downloader.py  make_dir.py
tests/: test_download.py
tests/funasr_bug_validation/: NOTICE.md  README.md  demo_reconstruct_segments.py  demo_timestamp.py  test_timestamps_field.py
tests/unit/: test_api_control_plane.py  test_api_cookie_vault.py  test_api_ingest_flow.py  test_api_runtime_entry.py  test_api_ws_gateway.py  test_asr_funasr_local_provider.py  test_asr_jsonl_writer.py  test_asr_provider.py  test_asr_provider_factory.py  test_contracts_models.py  test_deliverables_outputs.py  test_frame_summary_service.py  test_fusion_timeline.py  test_hotwords_rules.py  test_infra_event_bus.py  test_infra_sqlite_repository.py  test_infra_workspace_store.py  test_ingest_local_import.py  (+15 more)
workers/: __init__.py  celery_app.py
(+52 files in other folders)
