[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "videosieve"
version = "0.1.0"
description = "VideoSieve monorepo bootstrap scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages", "workers", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["apps", "packages", "workers", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/unit"]
pythonpath = [
  "packages",
  "apps/api",
  "workers",
]
