[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "videosieve"
version = "0.1.0"
description = "VideoSieve monorepo bootstrap scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44.0",
  "fastapi>=0.135.1",
  "numpy>=2.0",
  "opencv-python>=4.13.0",
  "pydantic>=2.12.5",
  "uvicorn[standard]>=0.41.0",
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
asr_local = [
  "funasr>=1.3.0",
  "transformers>=4.51.3",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "soundfile>=0.12.1",
]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = [
  "packages/contracts",
  "packages/core",
  "packages/infra",
  "packages/pipeline",
  "packages/ingest",
  "packages/hotwords",
  "packages/asr",
  "packages/keyframes",
  "packages/frame_summary",
  "apps/api",
  "workers",
]

[tool.hatch.build.targets.sdist]
include = [
  "apps/**",
  "packages/**",
  "workers/**",
  "tests/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages", "workers", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["apps", "packages", "workers", "tests"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/unit"]
pythonpath = [
  "packages",
  "apps/api",
  "workers",
]
